# dsmr_parser

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build-linux.sh  build-macos.sh  build-win.ps1  idf_component.yml  library.json
.github/workflows/: ci.yaml  publish.yml
src/dsmr/: fields.h
src/dsmr_parser/: aes128gcm.h  aes128gcm_bearssl.h  aes128gcm_mbedtls.h  component.cpp  dlms_packet_decryptor.h  encrypted_packet_accumulator.h  fields.h  packet_accumulator.h  parser.h  util.h
src/dsmr_parser/decryption/: aes128gcm.h  aes128gcm_bearssl.h  aes128gcm_mbedtls.h  aes128gcm_tfpsa.h
src/test/: aes128gcm_bearssl_include_test.cpp  aes128gcm_mbedtls_include_test.cpp  dlms_packet_decryptor_include_test.cpp  encrypted_packet_accumulator_example_test.cpp  encrypted_packet_accumulator_include_test.cpp  encrypted_packet_accumulator_test.cpp  packet_accumulator_example_test.cpp  packet_accumulator_include_test.cpp  parser_include_test.cpp  parser_test.cpp
src/test/test_data/: generate_encrypted_packet.py
test/: CMakeLists.txt  build-linux.sh  build-win.ps1  dlms_packet_decryptor_example_test.cpp  dlms_packet_decryptor_test.cpp  packet_accumulator_test.cpp
tests/: dlms_packet_decryptor_example_test.cpp  dlms_packet_decryptor_include_test.cpp  dlms_packet_decryptor_test.cpp  packet_accumulator_example_test.cpp  packet_accumulator_include_test.cpp  packet_accumulator_test.cpp  parser_include_test.cpp  parser_test.cpp  test_util.h
tests/decryption/: aes128gcm_bearssl_include_test.cpp  aes128gcm_mbedtls_include_test.cpp  aes128gcm_tfpsa_include_test.cpp
